--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,26 +3,26 @@ version: '3.9'
 services:
   java_app:
     container_name: java_app
-    image: francescoxx/java_app:1.0.0
+    image: ps49/java_app:1.0.0
     build: .
     ports:
-      - 8080:8080
+      - 7090:7090
     environment:
-      - DATABASE_URL=jdbc:postgresql://java_db:5432/postgres
+      - DATABASE_URL=jdbc:postgresql://java_db:5432/productdb
       - DATABASE_USERNAME=postgres
-      - DATABASE_PASSWORD=postgres
+      - DATABASE_PASSWORD=pappu123
     depends_on:
       - java_db
       
   java_db:
     container_name: java_db
-    image: postgres:12
+    image: postgres:15
     ports:
       - 5432:5432
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: postgres
+      POSTGRES_PASSWORD: pappu123
+      POSTGRES_DB: productdb
     volumes:
       - pgdata:/var/lib/postgresql/data
 
