--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     environment:
       POSTGRES_DB: productdb
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: productdb
+      POSTGRES_PASSWORD: pappu123
     ports:
       - "5432:5432"
 
@@ -16,6 +16,6 @@ services:
     environment:
       SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/productdb
       SPRING_DATASOURCE_USERNAME: postgres
-      SPRING_DATASOURCE_PASSWORD: productdb
+      SPRING_DATASOURCE_PASSWORD: pappu123
     ports:
       - "7090:7090"
