--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # PostgreSQL database configuration
 server.port=7090
-spring.datasource.url=jdbc:postgresql://localhost:5432/productdb
+spring.datasource.url=jdbc:postgresql://postgres:5432/productdb
 spring.datasource.username=postgres
 spring.datasource.password=pappu123
 spring.datasource.driver-class-name=org.postgresql.Driver
