--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,21 @@
-version: '3.9'
-
+version: '3.8'
 services:
-  java_app:
-    container_name: java_app
-    image: francescoxx/java_app:1.0.0
-    build: .
-    ports:
-      - 8080:8080
+  postgres:
+    image: postgres:15
     environment:
-      - DATABASE_URL=jdbc:postgresql://java_db:5432/postgres
-      - DATABASE_USERNAME=postgres
-      - DATABASE_PASSWORD=postgres
-    depends_on:
-      - java_db
-      
-  java_db:
-    container_name: java_db
-    image: postgres:12
-    ports:
-      - 5432:5432
-    environment:
+      POSTGRES_DB: productdb
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: postgres
-    volumes:
-      - pgdata:/var/lib/postgresql/data
+      POSTGRES_PASSWORD: pappu123
+    ports:
+      - "5432:5432"
 
-volumes:
-  pgdata: {}
+  springapp:
+    build: .
+    depends_on:
+      - postgres
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/productdb
+      SPRING_DATASOURCE_USERNAME: postgres
+      SPRING_DATASOURCE_PASSWORD: pappu123
+    ports:
+      - "7090:7090"
